Almost got the UI version working Still not playing within the loop. Not sure how to fix atm.

--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@ body {
 #info-container > * {
     margin: 1em;
 }
+
+#game-text {
+    font-size: 2em;
+    font-weight: bold;
+    color: #121212;
+}
